# Puzzle_2048

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
Includes/Puzzle_2048/: Block.h  Game.h
Sources/Puzzle_2048/: Block.cc  CMakeLists.txt  Game.cc  main.cc
